[gd_scene load_steps=34 format=1]

[ext_resource path="res://enemies/draug.gd" type="Script" id=1]
[ext_resource path="res://enemies/draug/draug_top_without_water_00.tex" type="Texture" id=2]
[ext_resource path="res://enemies/draug/draug_top_without_water_01.tex" type="Texture" id=3]
[ext_resource path="res://enemies/draug/draug_top_without_water_02.tex" type="Texture" id=4]
[ext_resource path="res://enemies/draug/draug_top_without_water_03.tex" type="Texture" id=5]
[ext_resource path="res://enemies/draug/draug_top_without_water_04.tex" type="Texture" id=6]
[ext_resource path="res://enemies/draug/draug_top_without_water_05.tex" type="Texture" id=7]
[ext_resource path="res://enemies/draug/draug_top_without_water_06.tex" type="Texture" id=8]
[ext_resource path="res://enemies/draug/draug_top_without_water_07.tex" type="Texture" id=9]
[ext_resource path="res://enemies/draug/draug_top_without_water_08.tex" type="Texture" id=10]
[ext_resource path="res://enemies/draug/draug_top_without_water_09.tex" type="Texture" id=11]
[ext_resource path="res://enemies/draug/draug_top_without_water_10.tex" type="Texture" id=12]
[ext_resource path="res://enemies/draug/draug_top_without_water_11.tex" type="Texture" id=13]
[ext_resource path="res://enemies/draug/draug_top_without_water_12.tex" type="Texture" id=14]
[ext_resource path="res://enemies/draug/draug_top_without_water_13.tex" type="Texture" id=15]
[ext_resource path="res://enemies/draug/draug_top_without_water_14.tex" type="Texture" id=16]
[ext_resource path="res://enemies/draug/draug_top_without_water_15.tex" type="Texture" id=17]
[ext_resource path="res://enemies/draug/draug_dead.tex" type="Texture" id=18]
[ext_resource path="res://enemies/draug/draug_hurt.tex" type="Texture" id=19]
[ext_resource path="res://enemies/draug/draug_top_without_water_16.tex" type="Texture" id=20]
[ext_resource path="res://enemies/draug/draug_top_without_water_17.tex" type="Texture" id=21]
[ext_resource path="res://enemies/draug/draug_top_without_water_18.tex" type="Texture" id=22]
[ext_resource path="res://enemies/draug/draug_top_without_water_19.tex" type="Texture" id=23]
[ext_resource path="res://enemies/draug/draug_top_without_water_20.tex" type="Texture" id=24]
[ext_resource path="res://enemies/draug/draug_top_without_water_21.tex" type="Texture" id=25]
[ext_resource path="res://enemies/draug/draug_top_without_water_22.tex" type="Texture" id=26]
[ext_resource path="res://enemies/draug/draug_top_without_water_23.tex" type="Texture" id=27]
[ext_resource path="res://enemies/draug/draug_top_without_water_24.tex" type="Texture" id=28]
[ext_resource path="res://enemies/draug/draug_shoot.smp" type="Sample" id=29]
[ext_resource path="res://hud/small_font.tres" type="DynamicFont" id=30]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "emerge",
"speed": 20.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "submerge",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "shoot",
"speed": 20.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/shoot = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 29 )
}

[node name="draug" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
shoot_target = null
shoot_pattern = null
shoot_amount = 0
shoot_degree_step = 0
shoot_delay = 0.1
health = 5
bullet_speed = 300.0
bullet_bounces = 1

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "submerge"
frame = 15
playing = true

[node name="shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="origin" type="Position2D" parent="."]

transform/pos = Vector2( 0, -12 )

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[node name="dying_tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="hit_aid" type="Node2D" parent="."]

[node name="label" type="Label" parent="hit_aid"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 48.0
margin/right = 16.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "64"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tween" type="Tween" parent="hit_aid"]

playback/process_mode = 1
playback/active = false
playback/repeat = true
playback/speed = 1.0

[connection signal="finished" from="sprite" to="." method="_on_sprite_finished"]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="tween_complete" from="dying_tween" to="." method="_on_dying_complete"]

[connection signal="tween_complete" from="hit_aid/tween" to="." method="_on_tween_tween_complete"]


